<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sort_by_create_date"
            android:title="@string/sort_by_create_date" />
        <item
            android:id="@+id/sort_by_name"
            android:title="@string/sort_by_name" />
        <item
            android:id="@+id/sort_by_artist"
            android:title="@string/sort_by_artist" />
        <item
            android:id="@+id/sort_by_year"
            android:title="@string/sort_by_year" />
        <item
            android:id="@+id/sort_by_song_count"
            android:title="@string/sort_by_song_count" />
        <item
            android:id="@+id/sort_by_length"
            android:title="@string/sort_by_length" />
    </group>
</menu>