<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="?dialogPreferredPadding"
            android:paddingTop="24dp"
            android:paddingEnd="?dialogPreferredPadding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/song_title"
                android:textColor="?android:textColorSecondary"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/song_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:clickable="true"
                android:focusable="true"
                android:textColor="?android:textColorPrimary"
                android:textSize="18sp"
                tools:text="Title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/song_artists"
                android:textColor="?android:textColorSecondary"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/song_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:clickable="true"
                android:focusable="true"
                android:textColor="?android:textColorPrimary"
                android:textSize="18sp"
                tools:text="Artist" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/media_id"
                android:textColor="?android:textColorSecondary"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/media_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:clickable="true"
                android:focusable="true"
                android:textColor="?android:textColorPrimary"
                android:textSize="18sp"
                tools:text="id" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Itag"
                android:textColor="?android:textColorSecondary"
                android:textSize="12sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/itag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:clickable="true"
                android:focusable="true"
                android:textColor="?android:textColorPrimary"
                android:textSize="18sp"
                tools:text="251" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mime_type"
                android:textColor="?android:textColorSecondary"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/mime_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:clickable="true"
                android:focusable="true"
                android:textColor="?android:textColorPrimary"
                android:textSize="18sp"
                tools:text="WebM" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/codecs"
                android:textColor="?android:textColorSecondary"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/codecs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:clickable="true"
                android:focusable="true"
                android:textColor="?android:textColorPrimary"
                android:textSize="18sp"
                tools:text="webm" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bitrate"
                android:textColor="?android:textColorSecondary"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/bitrate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:clickable="true"
                android:focusable="true"
                android:textColor="?android:textColorPrimary"
                android:textSize="18sp"
                tools:text="128 kbps" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_rate"
                android:textColor="?android:textColorSecondary"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/sample_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:clickable="true"
                android:focusable="true"
                android:textColor="?android:textColorPrimary"
                android:textSize="18sp"
                tools:text="44100 Hz" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loudness"
                android:textColor="?android:textColorSecondary"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/loudness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:clickable="true"
                android:focusable="true"
                android:textColor="?android:textColorPrimary"
                android:textSize="18sp"
                tools:text="4.22 dB" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/volume"
                android:textColor="?android:textColorSecondary"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/volume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:clickable="true"
                android:focusable="true"
                android:textColor="?android:textColorPrimary"
                android:textSize="18sp"
                tools:text="90%" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/file_size"
                android:textColor="?android:textColorSecondary"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/file_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:clickable="true"
                android:focusable="true"
                android:textColor="?android:textColorPrimary"
                android:textSize="18sp"
                tools:text="3 MB" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>